# pixie

./: Cargo.toml  README.md
assets/: rainbow.json
src/: lib.rs
src/common/: colour.rs  coordinate.rs  error.rs  frame.rs  mod.rs  pixel.rs
src/io/: codec.rs  mod.rs  queue.rs  server.rs  transport.rs
src/io/serialization/: decoder.rs  encoder.rs  mod.rs
src/ui/: display.rs  input.rs  mod.rs  painter.rs  renderer.rs
