[package]
name = "pixie"
version = "0.1.0"
edition = "2018"
authors = ["Jamie Hall <hello@jamiehall.eu>"]
license = "MIT/Apache-2.0"
description = "Displays a grid of pixels"
homepage = "https://github.com/jamhall/pixie"


[[bin]]
name = "server"
path = "src/bin/server/main.rs"

[[bin]]
name = "encode"
path = "src/bin/tools/encode.rs"

[dependencies]
sdl2 = "0.35"
clap = "3.0.0-beta.2"
env_logger = "0.9.0"
log = "0.4.14"
num_enum = "0.5.4"
tokio = { version = "1.13.0", features = ["full"] }
itertools = "0.10.1"
tokio-util = { version = "0.6.8", features = [
    "full",
] }
serde = { version = "1.0.130", features = ["derive"] }
tokio-stream = "0.1.8"
bytes = "1.1.0"
futures = "0.3.17"
serde_json = "1.0.71"
byteorder = "1.4.3"
